# 6502_emus

./: README.md
lazyboy/: ChangeLog.md  lazyboy.cabal  package.yaml  stack.yaml  test.txt
lazyboy/app/: Main.hs
lazyboy/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
lazyboy/src/: Cpu.hs  Memory.hs  Registers.hs
plusplus_emu/: CMakeLists.txt
plusplus_emu/include/: memory.h  registers.h  types.h
plusplus_emu/src/: main.cpp  memory.cpp  registers.cpp
rusty_emu/: Cargo.toml
rusty_emu/src/: cpu.rs  lib.rs  main.rs  memory.rs  registers.rs  utility.rs
